--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<h1>This is<br />
 						xoxo</h1>
 						<p>A new experience in makeup and Spa  <a href="https://twitter.com/ajlkn">@steffipark</a> for <a href="https://html5up.net">ME XD </a><br />
-						and released for free under the <a href="https://html5up.net/license">Creative Commons license</a>.</p>
+						and released for free under the <a href="https://html5up.net/license">Near you</a>.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
