--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 							<article class="post featured">
 								<header class="major">
 									<span class="date">April 25, 2017</span>
-									<h2><a href="#">wELCOME<br />
-									massive headline</a></h2>
+									<h2><a href="#">WELCOME<br />
+									To XOXO BEUTIFUL</a></h2>
 									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
 									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
 									amet nullam sed etiam veroeros.</p>
