--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						<ul class="links">
 							<li class="active"><a href="index.html">New</a></li>
 							<li><a href="generic.html">Special Sale</a></li>
-							<li><a href="elements.html">Elements Reference</a></li>
+							<li><a href="elements.html">Brands</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
