--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 									<h2><a href="#">WELCOME<br />
 									To XOXO BEUTIFUL</a></h2>
 									<p>This is your space for you and your skin<br />
-									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
+									You can buy and watch video references<br />
 									amet nullam sed etiam veroeros.</p>
 								</header>
 								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
