--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 									To XOXO BEUTIFUL</a></h2>
 									<p>This is your space for you and your skin<br />
 									You can buy and watch video references<br />
-									amet nullam sed etiam veroeros.</p>
+									in one click</p>
 								</header>
 								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 								<ul class="actions special">
