--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title<a href="https://www.facebook.com/daniela.munozsanchez.7?ref=bookmarks">>Hello im Steffi</title<a> </title>
+		<title>Hello im Steffi</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,8 +19,8 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>This is<br />
-						xoxo</h1>
+						<h1> This is<br />
+						<a href="https://www.facebook.com/daniela.munozsanchez.7?ref=bookmarks"target="_blank"> xoxo.</a></h1>
 						<p>A new experience in makeup and Spa  <a href="https://twitter.com/ajlkn">@steffipark</a> for <a href="https://html5up.net">ME XD </a><br />
 						and near you <a href="https://html5up.net/license">CDMX</a>.</p>
 						<ul class="actions">
