--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1> This is<br />
 						<a href="https://www.facebook.com/daniela.munozsanchez.7?ref=bookmarks"target="_blank"> xoxo.</a></h1>
-						<p>A new experience in makeup and Spa  <a href="https://twitter.com/ajlkn">@steffipark</a> for <a href="https://html5up.net">ME XD </a><br />
+						<p>A new experience in <a href="https://img.freepik.com/vector-gratis/fondo-maquillaje-elementos-dibujados-mano_23-2147815831.jpg?size=338&ext=jpg"target=_bank"> makeup .</a> and Spa  <a href="https://twitter.com/ajlkn">@steffipark</a> for <a href="https://html5up.net">ME XD </a><br />
 						and near you <a href="https://html5up.net/license">CDMX</a>.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solo fa-arrow-down scrolly">Continue</a></li>
