--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1> This is<br />
 						<a href="https://www.facebook.com/daniela.munozsanchez.7?ref=bookmarks"target="_blank"> xoxo.</a></h1>
-						<p>A new experience in <a href="https://img.freepik.com/vector-gratis/fondo-maquillaje-elementos-dibujados-mano_23-2147815831.jpg?size=338&ext=jpg"target=_blank"> makeup .</a> and <a href="https://www.wishbird.com.mx/media/catalog/product/cache/1/image/9df78eab33525d08d6e5fb8d27136e95/m/a/maoran_velas_1_1_1.jpg"target="_blank">Spa.</a>  <a href="https://www.facebook.com/daniela.munozsanchez.7?ref=bookmarks">@steffipark</a> for <a href="https://html5up.net">ME XD </a><br />
+						<p>A new experience in <a href="https://img.freepik.com/vector-gratis/fondo-maquillaje-elementos-dibujados-mano_23-2147815831.jpg?size=338&ext=jpg"target=_blank"> makeup .</a> and <a href="https://www.wishbird.com.mx/media/catalog/product/cache/1/image/9df78eab33525d08d6e5fb8d27136e95/m/a/maoran_velas_1_1_1.jpg"target="_blank">Spa.</a>  <a href="https://www.facebook.com/daniela.munozsanchez.7?ref=bookmarks"target="_blank">@steffipark</a> for <a href="https://html5up.net">ME XD </a><br />
 						and near you <a href="https://html5up.net/license">CDMX</a>.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solo fa-arrow-down scrolly">Continue</a></li>
